<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <!-- Menu top section -->
    <group
        android:id="@+id/menu_top_group"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"
            android:checked="true" />
    </group>

    <!-- Menu center section -->
    <group
        android:id="@+id/menu_scheduled_daily_workout"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_new_schedule"
            android:icon="@drawable/ic_menu_new_schedule"
            android:title="@string/menu_new_schedule" />
        <item
            android:id="@+id/menu_manage_users"
            android:icon="@drawable/ic_menu_manage_users"
            android:title="@string/menu_manage_users" />
    </group>

    <!-- Menu bottom section -->
    <group
        android:id="@+id/menu_bottom_group"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>