<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <!-- Menu top section -->
    <group
        android:id="@+id/menu_top_group"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"
            android:checked="true" />
        <!--
            Here there will be the "daily" daily workout
        -->
    </group>

    <!-- Menu center section -->
    <item android:title="@string/menu_scheduled_trainings">
        <menu>
            <group
                android:id="@+id/menu_scheduled_daily_workout"
                android:checkableBehavior="single" >

                <!--
                    Here there will be all the daily workouts
                -->
            </group>
        </menu>
    </item>

    <!-- Menu bottom section -->
    <group
        android:id="@+id/menu_bottom_group"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>