<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- Main layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Dark grey profile header -->
        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/profile_athlete_header"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/theme_secondary" />

        <!-- Profile image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_athlete_user_profile_image"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="-75dp"
            android:scaleType="centerCrop"
            android:elevation="5dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/theme_background"
            app:civ_circle_background_color="@color/theme_background" />

        <!-- Profile info -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingBottom="30dp" >

            <!-- Display name -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme_text_dark"
                    android:textSize="14sp"
                    android:text="@string/profile_display_name_label" />

                <TextView
                    android:id="@+id/profile_athlete_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:textColor="@color/theme_text_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- User height and weight -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <!-- User height -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_text_dark"
                        android:textSize="14sp"
                        android:text="@string/profile_height_label" />

                    <TextView
                        android:id="@+id/profile_athlete_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:text="@string/profile_default_value"
                        android:textColor="@color/theme_text_dark"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- User weight -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_text_dark"
                        android:textSize="14sp"
                        android:text="@string/profile_weight_label" />

                    <TextView
                        android:id="@+id/profile_athlete_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:text="@string/profile_default_value"
                        android:textColor="@color/theme_text_dark"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme_text_dark"
                    android:textSize="14sp"
                    android:text="@string/profile_email_label" />

                <TextView
                    android:id="@+id/profile_athlete_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:textColor="@color/theme_text_dark"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- User type and Registration date-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <!-- User type -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_text_dark"
                        android:textSize="14sp"
                        android:text="@string/profile_user_type_label" />

                    <TextView
                        android:id="@+id/profile_athlete_user_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:textColor="@color/theme_text_dark"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Registration date -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/theme_text_dark"
                        android:textSize="14sp"
                        android:text="@string/profile_registration_date_label" />

                    <TextView
                        android:id="@+id/profile_athlete_registration_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:textColor="@color/theme_text_dark"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Athlete first workout -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/theme_text_dark"
                    android:textSize="14sp"
                    android:text="@string/profile_first_workout_label" />

                <TextView
                    android:id="@+id/profile_athlete_first_workout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/profile_default_value"
                    android:textColor="@color/theme_text_dark"
                    android:textStyle="bold"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>